# setfitonnx

./: README.md  pyproject.toml
setfitonnx/: __init__.py  config.py  model_exporter.py  onnxexporter.py  pooler.py
tests/: test_setfitonnx.py
