[tool.poetry]
name = "setfitonnx"
version = "0.1.0"
description = "Package to pack setfit model to onnx format"
authors = ["vimal-quilt <vimal@quilt.ai>"]

[tool.poetry.dependencies]
python = "^3.9"
onnx = "^1.12.0"
skl2onnx = "^1.13"
onnxruntime = "^1.13.1"
setfit = "^0.4.1"
loguru = "^0.6.0"
joblib = "^1.2.0"
sclblonnx = "^0.1.14"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
