[tool.poetry]
name = "setfitonnx"
version = "0.1.0"
description = "Package to pack setfit model to onnx format"
authors = ["Vimal Babu <personal.vimal@gmail.com"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/vimal-b/setfitonnx"
repository = "https://github.com/vimal-b/setfitonnx"
keywords = ["setfit", "onnx", "sentence-transformers","onnxruntime"]
classifiers = [
    "Environment :: Console",
    "Framework :: setfit",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.9"
onnx = "^1.12.0"
skl2onnx = "^1.13"
onnxruntime = "^1.13.1"
setfit = "^0.4.1"
loguru = "^0.6.0"
joblib = "^1.2.0"
sclblonnx = "^0.1.14"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
